<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context="com.example.handsomeboy.e_sms.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiver"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
        android:id="@+id/edtNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint2"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="@string/ems"
        android:inputType="phone">
    <requestFocus/>
    </EditText>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/key"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
        android:id="@+id/edtKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:hint="@string/hint1"
        android:ems="@string/ems"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignLeft="@+id/textView1"
        android:text="Message:"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
        android:id="@+id/edtMsg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/secretkey"
        android:layout_below="@+id/secretkey"
        android:height="10dp"
        android:layout_weight="0.50"
        android:ems="@string/ems"
        android:hint="@string/hint3"
        android:inputType="textMultiLine" />
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="48dp"
            android:text="@string/send1"
            android:textStyle="bold"
            android:onClick="onClick"
            android:background="#008000"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="48dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textStyle="bold"
            android:background="#ff0000"
            tools:ignore="RtlHardcoded" />
</LinearLayout>
</LinearLayout>